tests/NormalTests/paczka1/fuzzy1/88549435.err
Error in line 3: A310 A310 66,9
Error in line 5: 10uOmq A310 19,6
Error in line 9: 05K3r7 A764 76,8
Error in line 12: 10uOmq A764 42,35
Error in line 16: A310 A439 3,4
Error in line 18: geXGFkNCFr A439 77,1
Error in line 23: 10uOmq A764 172,4
Error in line 19: A310 A310 42,8
Error in line 29: ZmJdC3RwDT A439 12,1
Error in line 11: 05K3r7 A439 31,7
